# py-mono-repo

./: README.md  pyproject.toml
api/: README.md  pyproject.toml
api/src/api/: __init__.py  server.py
api/src/xyz/api/: server.py
command-line/: README.md  pyproject.toml
command-line/src/command_line/: client.py
command-line/src/xyz/command_line/: __init__.py  client.py  client_test.py
core/: pyproject.toml
core/src/xyz/: __init__.py
core/src/xyz/core/: __init__.py  config.py  logging.py
front-end/: README.md  pyproject.toml
front-end/src/front_end/: server.py
