[project]
name = "xyz-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.uv.workspace]
members = [
    "core",
    "command-line",
    "front-end",
]

[tool.uv.sources]
xyz-core = { workspace = true }
command-line = { workspace = true }
front-end = { workspace = true }
