[project]
name = "xyz-workspace"
version = "0.1.0"
description = "A simple command line chat application to test a monorepo with uv and uv-workspaces"
readme = "README.md"
requires-python = "==3.12.*"

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.5", "ruff>=0.11.2"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["core", "command-line", "api"]

[tool.uv.sources]
xyz-core = { workspace = true }
command-line = { workspace = true }
xyz-api = { workspace = true }
