[project]
name = "command-line"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "requests>=2.31.0",
    "xyz-core",
]

[project.scripts]
greet = "command_line.client:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
