[project]
name = "xyz-command-line"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "requests>=2.31.0",
    "xyz-core",
]

[project.scripts]
greet = "xyz.command_line.client:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
python_files = "*_test.py"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
